--- a/YSM/package.json
+++ b/YSM/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "firebase": "^4.9.1",
+    "firebase-tools": "^3.17.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.4.2",
