--- a/YSM/package.json
+++ b/YSM/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
+    "@angular/cli": "^1.6.7",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -27,12 +28,13 @@
     "firebase": "^4.9.1",
     "firebase-tools": "^3.17.4",
     "jquery": "^3.3.1",
+    "node": "^9.5.0",
+    "npm": "^5.6.0",
     "popper.js": "^1.12.9",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.7",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
